# tricircle

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  envrc  index.rst  lower-constraints.txt  reno.yaml  requirements.txt  setup.cfg  sibling-requirements.txt  test-requirements.txt  tox.ini
cinderproxy/: README.md
cinderproxy/installation/: install.sh  uninstall.sh
cmd/: api.py  cascade_service.py  cinder_apigw.py  dispatcher.py  manage.py  nova_apigw.py  proxy.py  xjob.py
compute/: clients.py  compute_context.py  compute_keystoneclient.py  manager_proxy.py
devstack/: adminrc.sh  adminrc.sh.sample  apache-tricircle-api.template  local.conf.node_1.sample  local.conf.node_2.sample  local.conf.sample  plugin.sh  settings  verify_cross_pod_install.sh  verify_install.sh  verify_top_install.sh
doc/source/: api_v1.rst  conf.py  configuration.html  configuration.rst  contributing.rst  index.rst  installation-cell.rst  installation-guide.rst  installation-manual.rst  installation.rst  multi-node-installation-devstack.rst  multi-pod-installation-devstack.rst  networking-guide-direct-provider-networks.rst  networking-guide-local-networking.rst  networking-guide-multiple-external-networks.rst  networking-guide-multiple-ns-with-ew-enabled.rst  networking-guide-single-external-network.rst  networking-guide.rst  networking-prerequisites.rst  networking-scenarios.rst  networking-senarios.rst  networking-terms.rst  service-function-chaining-guide.rst  single-node-installation-devstack.rst  single-pod-installation-devstack.rst  usage.rst  vlan-aware-vms-guide.rst
etc/: api-cfg-gen.conf  api.conf  cascade_service.conf  cinder_apigw-cfg-gen.conf  nova_apigw-cfg-gen.conf  policy-generator.conf  tricircle_plugin-cfg-gen.conf  xjob-cfg-gen.conf
glancesync/: README.md
glancesync/etc/: glance-sync
glancesync/installation/: install.sh
icehouse-patches/cinder/: README.md
image/: cascading.py
l2_proxy/agent/: clients.py  l2_proxy.py  neutron_keystoneclient.py  neutron_proxy_context.py
l2_proxy/common/: config.py
neutronproxy/l2-proxy/: README.md
neutronproxy/l3-proxy/: README.md
novaproxy/: README.md
novaproxy/installation/: install.sh  uninstall.sh
playbooks/tricircle-dsvm-functional/: run.yaml
playbooks/tricircle-dsvm-multiregion/: run.yaml
releasenotes/: config.yaml
releasenotes/notes/: add-lbaas-ebb1009abd3da0dd.yaml  add-qos-policy-rule-f8f1529d7ad5d888.yaml  add-service-function-chaining-fc2cf9a2e8610b91.yaml  add-vlan-aware-vms-afa8c5a906f2ab49.yaml  asynchronous-job-management-api-c16acb43b495af7c.yaml  combine-bridge-network-c137a03f067c49a7.yaml  drop-py-2-7-afccd2f6bec9dfb5.yaml  enable-allowed-address-pairs-bca659413012b06c.yaml  enable-router-az-and-simplify-net-topology-5ac8739b167e3e4a.yaml  enable-update-default-securitygroup-9bb426021926d3e8.yaml  flat-network-8634686c1fede7b2.yaml  initial-release-notes-bd28a4a4bf1f84d2.yaml  initial-release-notes.yaml  multi-gateway-ns-networking-fbd876c7659a55a9.yaml  network-subnet-update-baed5ded548f7269.yaml  port-base-update-6668b76c2346633c.yaml  resource-routing-operation-649eb810911312ec.yaml  support-pagination-for-async-job-81728e9cb7aef731.yaml  support-pagination-for-resource-routing-list-13bcb0f1897dedf8.yaml  support-wsgi-deployment-21eb19bcb04932f0.yaml  tricircle-status-upgrade-check-framework-13ee546a958d17f7.yaml  vxlan-network-2a21433b4b691f72.yaml
releasenotes/source/: conf.py  index.rst  newton.rst
script/: README.md  __init__.py  config.py  exec.sh  tricircle.cfg
specs/: cross-pod-l2-networking.rst
specs/newton/: cross-neutron-l2-networking.rst  cross-pod-l2-networking.rst  dynamic-pod-binding.rst
specs/ocata/: enhance-xjob-reliability.rst  l3-networking-combined-bridge-net.rst  legacy_tables_clean.rst  local-neutron-plugin.rst  quality-of-service.rst
specs/pike/: async_job_management.rst  cross-neutron-vxlan-networking.rst  cross-pod-vxlan-networking.rst  l3-networking-multi-NS-with-EW-enabled.rst  smoke-test-engine.rst
specs/queens/: lbaas.rst  resource_deleting.rst
specs/stein/: new-l3-networking-mulit-NS-with-EW.rst
specs/train/: join-tricircle-and-trio2o.rst  multi-region container management.rst
tricircle/: context.py  version.py
tricircle/api/: app.py  opts.py  wsgi.py
tricircle/cascade_service/: compute.py  scheduler.py  service.py  site_manager.py
tricircle/cinder_apigw/: app.py  opts.py
tricircle/cmd/: api.py  manage.py  status.py  xjob.py
tricircle/common/: az_ag.py  baserpc.py  cascading_networking_api.py  cascading_site_api.py  client.py  config.py  constants.py  context.py  exceptions.py  httpclient.py  i18n.py  lock_handle.py  nova_lib.py  opts.py  policy.py  quota.py  request_source.py  resource_handle.py  restapp.py  rpc.py  serializer.py  service.py  singleton.py  topics.py  utils.py  version.py  xrpcapi.py
tricircle/compute_tricircle/: driver.py
tricircle/db/: api.py  client.py  core.py  exception.py  migration_helpers.py  models.py  opts.py  resource_handle.py
tricircle/dispatcher/: compute.py  compute_manager.py  host_manager.py  service.py  site_manager.py
tricircle/network/: central_fc_driver.py  central_plugin.py  central_qos_plugin.py  central_sfc_driver.py  central_sfc_plugin.py  central_trunk_driver.py  central_trunk_plugin.py  exceptions.py  helper.py  local_l3_plugin.py  local_plugin.py  managers.py  opts.py  plugin.py  qos_driver.py  security_groups.py  segment_plugin.py  utils.py
tricircle/networking/: plugin.py
tricircle/networking_tricircle/: plugin.py  rpc.py
tricircle/nova_apigw/: app.py  opts.py
tricircle/proxy/: compute_manager.py  service.py
tricircle/tempestplugin/: README.rst  config.py  gate_hook.sh  multi_gw_topology_test.yaml  plugin.py  port_delete_with_vm_create.yaml  port_delete_with_vm_create_shadow.yaml  (+14 more)
(+348 files in other folders)
