[metadata]
name = tricircle
summary = The Tricircle is to provide networking automation across Neutron in multi-region OpenStack deployments.
description-file = README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/tricircle/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    tricircle

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = tricircle/locale
domain = tricircle

[update_catalog]
domain = tricircle
output_dir = tricircle/locale
input_file = tricircle/locale/tricircle.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = tricircle/locale/tricircle.pot

[entry_points]
console_scripts =
    tricircle-db-manage = tricircle.cmd.manage:main
    tricircle-api = tricircle.cmd.api:main
    tricircle-xjob = tricircle.cmd.xjob:main
oslo.config.opts =
    tricircle.api = tricircle.api.opts:list_opts
    tricircle.common = tricircle.common.opts:list_opts
    tricircle.db = tricircle.db.opts:list_opts
    tricircle.network = tricircle.network.opts:list_opts
    tricircle.xjob = tricircle.xjob.opts:list_opts

tempest.test_plugins =
    tricircle_tests = tricircle.tempestplugin.plugin:TricircleTempestPlugin

tricircle.network.type_drivers =
    local = tricircle.network.drivers.type_local:LocalTypeDriver
    vlan = tricircle.network.drivers.type_vlan:VLANTypeDriver
