[metadata]
name = tricircle
summary = The Tricircle is to provide networking automation across Neutron in multi-region OpenStack deployments.
description-file = README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/tricircle/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    tricircle

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = tricircle/locale
domain = tricircle

[update_catalog]
domain = tricircle
output_dir = tricircle/locale
input_file = tricircle/locale/tricircle.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = tricircle/locale/tricircle.pot

[entry_points]
console_scripts =
    tricircle-api = tricircle.cmd.api:main
    tricircle-db-manage = tricircle.cmd.manage:main
    tricircle-xjob = tricircle.cmd.xjob:main
wsgi_scripts =
    tricircle-api-wsgi = tricircle.api.wsgi:init_application
oslo.config.opts =
    tricircle.api = tricircle.api.opts:list_opts
    tricircle.common = tricircle.common.opts:list_opts
    tricircle.db = tricircle.db.opts:list_opts
    tricircle.network = tricircle.network.opts:list_opts
    tricircle.xjob = tricircle.xjob.opts:list_opts
oslo.policy.policies =
    tricircle = tricircle.common.policy:list_policies
tricircle.network.type_drivers =
    local = tricircle.network.drivers.type_local:LocalTypeDriver
    vlan = tricircle.network.drivers.type_vlan:VLANTypeDriver
    vxlan = tricircle.network.drivers.type_vxlan:VxLANTypeDriver
    flat = tricircle.network.drivers.type_flat:FlatTypeDriver
networking_sfc.flowclassifier.drivers =
    tricircle_fc = tricircle.network.central_fc_driver:TricircleFcDriver
networking_sfc.sfc.drivers =
    tricircle_sfc = tricircle.network.central_sfc_driver:TricircleSfcDriver
